# Studify

./: Assignment.cpp  Assignment.h  CMakeLists.txt  FileHandler.cpp  FileHandler.h  MainWindow.cpp  MainWindow.h  PlannerManager.cpp  PlannerManager.h  README.md  Testing  main.cpp  sample_assignments.json
docs/: uml.md
